[package]
name = "tinyquest"
version = "0.1.0"
authors = ["Icelk"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
support = ["rustls", "webpki", "webpki-roots"]

[dependencies]
http = "0.2.1"
native-tls = "0.2.4"
rustls = { version = "0.18.1", optional = true }
webpki-roots = { version = "0.20.0", optional = true }
webpki = { version = "0.21.3", optional = true }

[[example]]
name = "get"

[[example]]
name = "write"
