[package]
name = "tinyquest"
description = "A small library used for making HTTP requests. It interacts with native-tls to be as small as possible, as it is used in small CLI's"
repository = "https://github.com/Iselk/LIM/tree/master/tinyquest"
readme = "README.md"
version = "0.3.0"
authors = ["Icelk"]
edition = "2018"
license = "MIT"
keywords = ["utility", "network", "http", "request"]
categories = ["web-programming::http-client"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "0.2"
chunked_transfer = "1.2"
native-tls = "0.2"

[[example]]
name = "get"

[[example]]
name = "write"

[[example]]
name = "head"
